--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 server.port=1345
 spring.mvc.format.date=yyyy-MM-dd
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=iheb.lafi@esprit.tn
+spring.mail.password=dzapusosdfpgfnsu
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 
