--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,10 @@ server.port=1345
 spring.mvc.format.date=yyyy-MM-dd
 
 
+#Mailing
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hedilsaid36@gmail.com
+spring.mail.password=pnuxapvrdzbcqbzn
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
